syntax = "proto3";

package pb;

option go_package = "github.com/fpessoa64/desafio_clean_arch/proto;orderpb";

message Order {
  int64 id = 1;
  string name = 2;
  double amount = 3;
  string status = 4;
  string created_at = 5;
}

message CreateOrderRequest {
  string name = 1;
  double amount = 2;
  string status = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
